@@ -89,6 +89,16 @@ if (sys.maxsize < 2 ** 32) or (platform.mac_ver()[0] >= '10.7'):
         # Implement unittests for formal protocols here.
         #
 
+        def testInheritedProtocol(self):
+            class MyClassImplementingNSObject(NSObject, protocols=[objc.protocolNamed("OC_TestProtocol2")]):
+                def method(self): return 1
+
+                @classmethod
+                def classMethod(self):
+                    return 2
+            self.assertTrue(MyClassImplementingNSObject.conformsToProtocol_(objc.protocolNamed("OC_TestProtocol2")))
+
+
         def testImplementAnotherObject(self):
             anObject = NSObject.alloc().init()
 
